2006-12-21  Inge Wallin  <inge@lysator.liu.se>

	Fourth step, part 1 of wish 117960
	* Move:
	kchartConfigDialog                -->  dialogs/KCConfigDialog
	kchartDataConfigPage              -->  dialogs/KCConfigDataPage
	kchartSubTypeChartPage            -->  dialogs/KCConfigSubtypePage
	kchartBackgroundPixmapConfigPage  -->  dialogs/KCConfigBackgroundPage

2006-12-20  Inge Wallin  <inge@lysator.liu.se>

	Third step of wish 117960
	* Move the printer dialog to dialogs/

2006-12-17  Inge Wallin  <ingwa@c83-252-239-226.bredband.comhem.se>

	Second step of wish 117960
	* Move the page layout dialog to dialogs/

2006-12-10  Inge Wallin  <ingwa@c83-252-232-192.bredband.comhem.se>

	First step of wish 117960: (code structure): put the wizard and
	config dialog in a "dialogs" subdirectory
	* Created subdirectory dialogs/ and moved the wizard to it.

2006-11-06  Inge Wallin  <inge@lysator.liu.se>

	Fix  bug 128758: misinterpretation of the checkbox "first row as label"
	* kchart_part.cc (createLabelsAndLegend): Pass parameters as
	references.

2006-10-10  Inge Wallin  <ingwa@dhcp-254-139.lkpg.cendio.se>

	* kchart_params.cc (saveOasisAxis): Add saving of axis titles.

2006-10-06  ----  Version 1.6.0 tagged  ----

2006-10-03  Inge Wallin  <inge@lysator.liu.se>

	* kchart_params.cc (loadOasisPlotarea): Fix bug.  Pie charts use
	only the y axis, not only the x axis.

2006-09-28  Inge Wallin  <inge@lysator.liu.se>

	* kchart_params.cc (loadOasisPlotarea): Add support for
	chart:series-source (row or column):

2006-07-18  Inge Wallin  <inge@lysator.liu.se>

	Clean up the data editor and fix bug 129553: kchart: crash / heavy
	load with Row=0 in KChart Data Editor
	* kchartDataEditor.{h,cc} (currentChanged): New method
	(m_insertRowButton, m_removeRowButton, m_insertRowButton,
	  m_removeRowButton): New members
	* kchartDataEditor.cc (removeCurrentRow, removeCurrentCol): Don't
	allow to remove a row or column if it's the first column or if
	there are only 2 of them.
